--- a/Client/staticwebapp.config.json
+++ b/Client/staticwebapp.config.json
@@ -1,5 +1,9 @@
 {
     "navigationFallback": {
         "rewrite": "/index.html"
+    },
+    {
+        "route": "/fetchdata",
+        "allowedRoles": [ "authenticated" ]
     }
 }
