--- a/Client/staticwebapp.config.json
+++ b/Client/staticwebapp.config.json
@@ -2,7 +2,15 @@
     "routes": [
         {
             "route": "/api/*",
-            "allowedRoles": ["authenticated"]
+            "allowedRoles": [ "authenticated" ]
+        },
+        {
+            "route": "/login",
+            "redirect": "/.auth/login/aad"
+        },
+        {
+            "route": "/logout",
+            "redirect": "/.auth/logout"
         }
     ],
     "navigationFallback": {
